Add css and set player to autosize.

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,25 @@
 <html>
   <head>
     <title>My App</title>
+    <style>
+      .player {
+        width: 640px;
+        height: 360px;
+        overflow: hidden;
+      }
+      .buttons {
+        width:  640px;
+      }
+      .button {
+        width:  640px;
+        height: 100px;
+      }
+    </style>
   </head>
   <body>
     <div class="app">
         <div class="player"></div>
+        <div class="buttons"></div>
     </div>
     <script src="app.js"></script>
   </body>
