--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
         height: 100px;
       }
     </style>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr@0.2.100/dist/clappr.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr@latest/dist/clappr.min.js"></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr-chromecast-plugin@0.0.6/dist/clappr-chromecast-plugin.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clappr-chromecast-plugin@0.1.0/dist/clappr-chromecast-plugin.min.js"></script> -->
   </head>
   <body>
     <div class="app">
